--- a/grid.conf
+++ b/grid.conf
@@ -1,7 +1,7 @@
 [server]
 cpus = 2
-daemon = false
-debug = true
+daemon = true
+debug = false
 port = 5353
 
 [gslb]
@@ -9,3 +9,5 @@ myname = "grid-1"
 interval = 100
 keepalive = 60
 acprefix = "MMY"
+cutoff_percent = 85
+deny_percent = 95
