--- a/grid.conf
+++ b/grid.conf
@@ -1,5 +1,5 @@
 [server]
-cpus = 2
+cpus = 4
 daemon = true
 debug = false
 port = 5353
@@ -17,4 +17,4 @@ rt_cache_ttl = 100
 ip_cache_size = 1000
 rt_cache_size = 1000
 log_buf_size = 1000
-log_enable = true
+log_enable = false
