--- a/grid.conf
+++ b/grid.conf
@@ -1,9 +1,12 @@
 [server]
-cpus = 4
-daemon = true
+cpus = 2
+daemon = 1
 debug = false
 port = 5353
+
 master = true
+childs = 2
+show_workpath = 0
 
 [gslb]
 myname = "grid-1"
@@ -17,4 +20,4 @@ rt_cache_ttl = 100
 ip_cache_size = 1000
 rt_cache_size = 1000
 log_buf_size = 1000
-log_enable = false
+log_enable = true
