--- a/grid.conf
+++ b/grid.conf
@@ -5,7 +5,7 @@ debug = false
 port = 5353
 
 master = true
-childs = 2
+childs = 1
 show_workpath = 0
 
 [gslb]
@@ -20,4 +20,4 @@ rt_cache_ttl = 100
 ip_cache_size = 1000
 rt_cache_size = 1000
 log_buf_size = 1000
-log_enable = true
+log_enable = 1
