--- a/grid.conf
+++ b/grid.conf
@@ -1,7 +1,7 @@
 [server]
 cpus = 2
 daemon = 1
-debug = false
+debug = true
 port = 5353
 
 master = true
@@ -20,4 +20,4 @@ rt_cache_ttl = 100
 ip_cache_size = 1000
 rt_cache_size = 1000
 log_buf_size = 1000
-log_enable = 0
+log_enable = 1
