--- a/grid.conf
+++ b/grid.conf
@@ -1,10 +1,10 @@
 [server]
 cpus = 2
-daemon = 1
+daemon = true
 debug = true
 port = 5353
 
-master = true
+master = 1
 childs = 1
 show_workpath = 0
 
