--- a/grid.conf
+++ b/grid.conf
@@ -1,8 +1,8 @@
 [server]
 cpus = 2
 daemon = true
-debug = true
-port = 5354
+debug = false
+port = 5353
 
 master = 1
 childs = 1
@@ -21,4 +21,5 @@ rt_cache_ttl = 100
 ip_cache_size = 1000
 rt_cache_size = 1000
 log_buf_size = 1000
-log_enable = 1
+log_enable = 0
+state_recv = true
