--- a/grid.conf
+++ b/grid.conf
@@ -23,4 +23,5 @@ rt_cache_size = 1000
 log_buf_size = 1000
 log_enable = 1
 state_recv = 0 
-domain_spliter = "###"
+ip_domain_spliter = "#"
+ac_domain_spliter = "@"
