--- a/grid.conf
+++ b/grid.conf
@@ -2,7 +2,7 @@
 cpus = 2
 daemon = true
 debug = false
-port = 5353
+port = 5354
 
 master = 1
 childs = 1
@@ -21,7 +21,7 @@ rt_cache_ttl = 100
 ip_cache_size = 1000
 rt_cache_size = 1000
 log_buf_size = 1000
-log_enable = 1
+log_enable = 0
 state_recv = 0 
-ip_domain_spliter = "#"
-ac_domain_spliter = "@"
+ip_domain_spliter = "###"
+ac_domain_spliter = "@@@"
