--- a/grid.conf
+++ b/grid.conf
@@ -3,23 +3,32 @@ cpus = 2
 daemon = true
 debug = false
 port = 5353
+bufsize = 4194304
 
 master = 1
 childs = 1
 show_workpath = 0
 
 [gslb]
+amqp_uri = "amqp://user:pass@rabbitmq:5672//gslb"
 mydomain = "mmycdn.com"
 myname = "grid-1"
 interval = 100
 keepalive = 60
+state_recv = 1 
+compress = 1
+random_rr = true
+
 acprefix = "MMY"
 cutoff_percent = 85
 deny_percent = 95
+
 ip_cache_ttl = 100
 rt_cache_ttl = 100
+rr_cache_ttl = 10
+
 ip_cache_size = 1000
 rt_cache_size = 1000
-log_buf_size = 1000
-log_enable = 0
-state_recv = 0 
+
+log_enable = true
+log_buf_size = 4000
