--- a/grid.conf
+++ b/grid.conf
@@ -3,6 +3,7 @@ cpus = 2
 daemon = true
 debug = false
 port = 5353
+http_port = 8080
 bufsize = 4194304
 
 master = 1
@@ -11,8 +12,11 @@ show_workpath = 0
 
 [gslb]
 amqp_uri = "amqp://user:pass@rabbitmq:5672//gslb"
+amqp_center = "gslb-center"
+
 mydomain = "mmycdn.com"
 myname = "grid-1"
+
 interval = 100
 keepalive = 60
 state_recv = 1 
