--- a/grid.conf
+++ b/grid.conf
@@ -29,10 +29,13 @@ deny_percent = 95
 
 ip_cache_ttl = 100
 rt_cache_ttl = 100
+
 rr_cache_ttl = 10
+http_cache_ttl = 10
 
 ip_cache_size = 1000
 rt_cache_size = 1000
+http_cache_size = 1000
 
 log_enable = true
 log_buf_size = 1000
