--- a/grid.conf
+++ b/grid.conf
@@ -33,6 +33,8 @@ rt_cache_ttl = 100
 rr_cache_ttl = 10
 http_cache_ttl = 10
 
+http_engine = "gohttp"
+
 ip_cache_size = 1000
 rt_cache_size = 1000
 http_cache_size = 1000
