--- a/grid.conf
+++ b/grid.conf
@@ -33,7 +33,7 @@ rt_cache_ttl = 100
 rr_cache_ttl = 10
 http_cache_ttl = 10
 
-http_engine = "gohttp"
+http_engine = "fasthttp"
 
 ip_cache_size = 1000
 rt_cache_size = 1000
@@ -41,3 +41,6 @@ http_cache_size = 1000
 
 log_enable = true
 log_buf_size = 1000
+
+http_302_mode = 0
+http_302_param = "_mmDN_"
