--- a/grid.conf
+++ b/grid.conf
@@ -43,4 +43,7 @@ log_enable = true
 log_buf_size = 1000
 
 http_302_mode = 0
-http_302_param = "_mmDN_"
+http_302_param = "_mmyDN_"
+
+rtmp_url_header="Rtmp-Url"
+rtmp_url_mode_header="Rtmp-Url-Mode"
